# DECIMAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
include/: decimal.h  decimal.tpp
tests/: CMakeLists.txt  tests.cc
